# hpp-inverse-kinematics

./: CMakeLists.txt  README.md  package.xml
corba/: CMakeLists.txt  example.py  staubli-tx2.cc  staubli-tx2.hh  staubli-tx2.impl.cc  staubli-tx2.impl.hh
corba/hpp/corbaserver/inverse_kinematics/: __init__.py  client.py
corba/idl/hpp/corbaserver/inverse-kinematics/: staubli-tx2.idl
doc/: Doxyfile.extra.in  inverse-kinematics.bib  inverse-kinematics.tex  main-page.hh
doc/figures/: kinematic-chain.pdf_tex  q2-q3.pdf_tex  staubli-TX90-schematic.pdf_tex
include/hpp/inverse-kinematics/: fwd.hh  staubli-tx2.hh
src/: configuration-variables.hh  staubli-tx2.cc
tests/: CMakeLists.txt  staubli-tx2.cc.in
tests/urdf/: part.urdf  staubli_tx2_90.urdf
